--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="This a note taking web application" />
+    
     <title>myNoteBook</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/flowbite@1.4.4/dist/flowbite.js"></script>
   </body>
 </html>
